--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<h1>pick <span>of</span> the litter</h1>
 		<form action="" class="searchForm">
-			<label for="locationInput">your personal puppy locator</label>
+			<label for="locationInput">your test personal puppy locator</label>
 			<input type="text" id="locationInput" name="location" class="searchLocation" required placeholder="EX. Toronto, ON or A1A 1A1">
 			<input type="submit">
 		</form>
